--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
   "devDependencies": {
     "@babel/core": "^7.16.0",
     "@intlify/vite-plugin-vue-i18n": "^3.2.1",
-    "@storybook/addon-a11y": "^6.5.7",
-    "@storybook/addon-actions": "^6.5.7",
-    "@storybook/addon-essentials": "^6.5.7",
-    "@storybook/addon-links": "^6.5.7",
+    "@storybook/addon-actions": "^6.5.9",
+    "@storybook/addon-essentials": "^6.5.9",
+    "@storybook/addon-links": "^6.5.9",
     "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/vue3": "^6.5.7",
+    "@storybook/builder-vite": "^0.1.36",
+    "@storybook/vue3": "^6.5.9",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "@vitejs/plugin-vue": "^2.2.2",
@@ -38,7 +38,6 @@
     "eslint-plugin-vue": "^8.0.1",
     "postcss": "^8.4.14",
     "prettier": "^2.5.0",
-    "storybook-builder-vite": "^0.1.17",
     "storybook-dark-mode": "^1.1.0",
     "tailwindcss": "^3.0.24",
     "typescript": "^4.5.5",
