--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "babel-loader": "^8.2.3",
     "eslint": "^8.0.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-markdown": "^2.2.1",
     "eslint-plugin-prettier": "4.0.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-storybook": "^0.5.12",
     "eslint-plugin-vue": "^8.0.1",
     "postcss": "^8.4.14",
