--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "typescript": "^4.5.5",
     "vite": "^2.8.4",
     "vite-plugin-eslint": "^1.3.0",
+    "vite-plugin-vue-type-imports": "^0.2.0",
     "vue-loader": "^16.8.3",
     "vue-tsc": "^0.31.4"
   }
