--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview",
+    "test": "vitest --dom",
+    "coverage": "vitest run --coverage",
     "storybook": "start-storybook -p 6006",
     "build:storybook": "build-storybook",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
@@ -27,8 +29,10 @@
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "@vitejs/plugin-vue": "^2.2.2",
+    "@vitest/coverage-istanbul": "^0.27.1",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^10.0.0",
+    "@vue/test-utils": "^2.2.7",
     "autoprefixer": "^10.4.7",
     "babel-loader": "^8.2.3",
     "eslint": "^8.0.0",
@@ -39,6 +43,8 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-storybook": "^0.5.12",
     "eslint-plugin-vue": "^8.0.1",
+    "happy-dom": "^8.1.4",
+    "msw": "^0.49.2",
     "postcss": "^8.4.14",
     "prettier": "^2.5.0",
     "storybook-dark-mode": "^1.1.0",
@@ -47,6 +53,7 @@
     "vite": "^2.8.4",
     "vite-plugin-eslint": "^1.3.0",
     "vite-plugin-vue-type-imports": "^0.2.0",
+    "vitest": "^0.27.1",
     "vue-loader": "^16.8.3",
     "vue-tsc": "^0.31.4"
   }
