--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "storybook": "start-storybook -p 6006",
     "build:storybook": "build-storybook",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
-    "format": "prettier .  --write"
+    "format": "prettier .  --write",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@storybook/addon-docs": "^6.5.9",
@@ -19,6 +20,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
+    "@commitlint/cli": "^17.4.2",
+    "@commitlint/config-conventional": "^17.4.2",
     "@intlify/vite-plugin-vue-i18n": "^3.2.1",
     "@storybook/addon-actions": "^6.5.9",
     "@storybook/addon-essentials": "^6.5.9",
@@ -44,6 +47,7 @@
     "eslint-plugin-storybook": "^0.5.12",
     "eslint-plugin-vue": "^8.0.1",
     "happy-dom": "^8.1.4",
+    "husky": "^8.0.3",
     "msw": "^0.49.2",
     "postcss": "^8.4.14",
     "prettier": "^2.5.0",
