feat: router and store

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   },
   "dependencies": {
     "@storybook/addon-docs": "^6.5.9",
-    "vue": "^3.2.16"
+    "pinia": "^2.0.34",
+    "vue": "^3.2.16",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
