--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue3-powerbuild",
+  "name": "validation-uz",
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
@@ -18,7 +18,9 @@
     "@storybook/addon-docs": "^6.5.9",
     "pinia": "^2.0.34",
     "vue": "^3.2.16",
-    "vue-router": "4"
+    "vue-router": "4",
+    "@vuelidate/core": "^2.0.0-alpha.41",
+    "@vuelidate/validators": "^2.0.0-alpha.29"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
