--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vuelidate/validators": "^2.0.0-alpha.29",
     "@vueuse/core": "^9.13.0",
     "pinia": "^2.0.34",
+    "axios": "^1.5.0",
     "vue": "^3.2.16",
     "vue-router": "4"
   },
